# CircuitPython_HDC1080

./: .readthedocs.yaml  LICENSE  README.rst  README.rst.license  hdc1080.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: release_gh.yml
docs/: api.rst  conf.py  examples.rst  examples.rst.license  index.rst
examples/: hdc1080_simpletest.py
